[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/enemies/kamikaze/KamikazeEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/kamikaze/Kamikaze.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/sounds/EnemyExplode.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/enemies/sounds/AttackPreparation.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/materials/ExplosionParticles.tres" type="Material" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.5467, 29.0373 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0174672, 1 )
colors = PoolColorArray( 1, 0.396973, 0.1875, 1, 0.117188, 0.117188, 0.117188, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 5.43573, 0, 0, Vector2( 1, 0 ), -2.15302, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 18.75, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="KamikazeEnemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 39
script = ExtResource( 1 )

[node name="KamikazeCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="KamikazeCollision_precise" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.35, 0 )
build_mode = 1
polygon = PoolVector2Array( -0.384048, -31.1643, -21.3768, -27.5688, -26.48, -22.1177, -27.7559, -18.5222, -25.6682, -12.8391, -19.8691, -15.5067, -7.45897, -17.8263, -9.08272, 8.61762, -12.9101, 16.5044, -19.5211, 23.1154, -19.6371, 24.6232, -1.07994, 30.8862, 18.637, 25.3191, 18.4051, 23.3474, 12.49, 17.3163, 8.31461, 7.68977, 5.41506, -18.2902, 18.985, -15.2747, 24.7841, -12.7231, 26.6398, -18.2902, 25.9439, -22.6976, 19.9128, -27.9168 )
disabled = true

[node name="KamikazeSprite" type="Sprite" parent="."]
position = Vector2( 0.5, 0 )
texture = ExtResource( 2 )

[node name="KamikazeDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="KamikazePropulsion" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0.350266, 24.5103 )
amount = 128
local_coords = false
process_material = SubResource( 5 )

[node name="AttackPreparationTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AtackPreparationSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
attenuation = 0.392292

[node name="AttackPreparationTween" type="Tween" parent="."]

[node name="AttackTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ExplosionParticles" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.478431 )
emitting = false
amount = 512
lifetime = 1.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = false
process_material = ExtResource( 5 )
[connection signal="timeout" from="DeletionTimer" to="." method="_on_DeletionTimer_timeout"]
[connection signal="timeout" from="AttackPreparationTimer" to="." method="_on_AttackPreparationTimer_timeout"]
[connection signal="tween_all_completed" from="AttackTween" to="." method="_on_AttackTween_tween_all_completed"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
